# robot-DMPC-collaboration

./: .gitignore
approach_locate/: CMakeLists.txt  package.xml
approach_locate/include/approach_locate/: locate.h
approach_locate/launch/: debug.launch  init.launch  start.launch
approach_locate/scripts/: calib.py
approach_locate/src/: init_calib.cpp  locate.cpp  main.cpp
centerized_form/: launch_all.launch
centerized_form/src/: batch_solver.cpp  main.cpp  utility.h  vehicle.h
centralized_form/: CMakeLists.txt  launch_all.launch  myrvizdefault.rviz  package.xml
centralized_form/launch/: cli.launch  visualize.launch
centralized_form/src/: batch_solver.cpp  batch_solver.h  fg_eval.h  main.cpp  utility.h  vehicle.h
sync_dmpc_form/: run.sh
sync_dmpc_form/devel/: .catkin  setup.sh
sync_dmpc_form/devel/include/mymsg/: neighborpos.h
sync_dmpc_form/devel/lib/pkgconfig/: mymsg.pc  vehicle01.pc  vehicle02.pc  vehicle03.pc
sync_dmpc_form/devel/lib/vehicle01/: vehicle01
sync_dmpc_form/devel/lib/vehicle02/: vehicle02
sync_dmpc_form/devel/lib/vehicle03/: vehicle03
sync_dmpc_form/devel/share/mymsg/cmake/: mymsg-msg-extras.cmake  mymsg-msg-paths.cmake  (+1 more)
sync_dmpc_form/src/: launch_all.launch  myrvizdefault.rviz
sync_dmpc_form/src/formation/: CMakeLists.txt  package.xml  peckage.xml
sync_dmpc_form/src/formation/src/: main.cpp
sync_dmpc_form/src/launch/: demo.launch
sync_dmpc_form/src/mymsg/: CMakeLists.txt
sync_dmpc_form/src/mymsg/msg/: neighborpos.msg  refpos.msg
sync_dmpc_form/src/vehicle01/src/: alter.cpp  batch_solver.cpp  fg_eval.h  main.cpp  utility.h  vehicle.h
sync_dmpc_form/src/vehicle02/src/: main.cpp  utility.h
sync_dmpc_form/src/vehicle03/src/: batch_solver.cpp  fg_eval.h  main.cpp  utility.h
udp_relay/: CMakeLists.txt  package.xml
udp_relay/config/: init.cfg  master.yaml  slave.yaml
udp_relay/include/: kalman.h  udp_master.h  udp_slave.h
udp_relay/launch/: master.launch  slave.launch
udp_relay/scripts/: sim_remap.py
udp_relay/src/: kalman.cpp  master.cpp  sim_remap.cpp  slave.cpp  udp_master.cpp  udp_slave.cpp
(+13 files in other folders)
